<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.noid.toolbox.opdf</groupId>
  <artifactId>opdf-parent</artifactId>
  <version>0.1.0</version>

  <packaging>pom</packaging>
  <name>Open PDF Tool :: Parent</name>

  <properties>
    <encoding>utf-8</encoding>
    <java.version>17</java.version>
    <pdfbox.version>2.0.29</pdfbox.version>
    <junit.version>5.9.3</junit.version>
    <mockito.version>5.2.0</mockito.version>
  </properties>

  <modules>
    <module>opdf-api</module>
    <module>opdf-cli</module>
    <module>opdf-pdfbox</module>
  </modules>

  <profiles>
    <profile>
      <id>assembly</id>
      <modules>
        <module>opdf-assembly</module>
      </modules>
    </profile>
  </profiles>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>dev.noid.toolbox.opdf</groupId>
        <artifactId>opdf-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.noid.toolbox.opdf</groupId>
        <artifactId>opdf-cli</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.noid.toolbox.opdf</groupId>
        <artifactId>opdf-pdfbox</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.pdfbox</groupId>
        <artifactId>pdfbox</artifactId>
        <version>${pdfbox.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-inline</artifactId>
        <version>${mockito.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>${java.version}</release>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.1.2</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.10</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>